Sun Aug 22 15:46:56 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkpaned.c (gtk_paned_class_init):
	s/CYCLE_HANDLE_FOCUS/CYCLE_CHILD_FOCUS/

	* gtk/gtkfontbutton.c (gtk_font_button_class_init):
	s/PROP_SHOW_SIZE/PROP_SHOW_STYLE/

	Both pointed out by Tommi Komulainen.

Sun Aug 22 13:44:53 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkpaned.c (gtk_paned_class_init): Use PROP_MAX_POSITION,
	not PROP_MIN_POSITION for the max_position property. Fix pointet
	out by Tommi Komulainen.

Sun Aug 22 00:08:44 2004  Matthias Clasen  <maclas@gmx.de>

	Fix #150406, reported by Fernando San Martín Woerner, patch
	by Gustavo Carneiro.
	
	* gtk/gtkentrycompletion.c 
	(gtk_entry_completion_default_completion_func): Check that 
	column is of type G_TYPE_STRING before proceeding.

Sat Aug 21 23:53:39 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreestore.c (gtk_tree_store_swap): Don't use an 
	uninitialized tree iter.  (#150414, Torsten Schoenfeld)

Sat Aug 21 23:29:54 2004  Matthias Clasen  <maclas@gmx.de>

	Fix #150738, Tomislav Jonjic.
	
	* gtk/gtktoolitem.h (GTK_IS_TOOL_ITEM_CLASS): 
	* gtk/gtktoolbutton.h (GTK_IS_TOOL_BUTTON_CLASS): 
	* gtk/gtktoggleaction.h (GTK_IS_TOGGLE_ACTION_CLASS): 
	* gtk/gtkseparatortoolitem.h (GTK_IS_SEPARATOR_TOOL_ITEM_CLASS): 
	* gtk/gtkradiotoolbutton.h (GTK_IS_RADIO_TOOL_BUTTON_CLASS): 
	* gtk/gtkradioaction.h (GTK_IS_RADIO_ACTION_CLASS): 
	* gtk/gtkuimanager.h (GTK_IS_UI_MANAGER_CLASS): 
	* gtk/gtkaction.h (GTK_IS_ACTION_CLASS): Fix macro definitions.
	
Mon Aug 16 01:30:12 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkbutton.c (gtk_button_set_focus_on_click): Fix typo in 
	the docs.

Wed Aug 18 16:18:00 2004  Manish Singh  <yosh@gimp.org>

	* gtk/gtktreeview.c (gtk_tree_view_row_inserted): Initialize height
	from fixed_height before we do anything, so it always has a valid
	value.

2004-08-18  Federico Mena Quintero  <federico@ximian.com>

	Fixes #149251:

	* gtk/gtkfilechooserdefault.c: Renamed SHORTCUTS_COL_PATH to